--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "news-crawler-collection"
 version = "0.1.0"
 description = "A multi-platform news and content crawler collection for educational purposes"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
     "lxml==5.3.0",
     "parsel==1.9.1",
@@ -15,12 +15,17 @@ dependencies = [
     "pytz==2024.2",
     "demjson3==3.0.6",
     "curl-cffi==0.7.3",
+    "news-extractor-core",
+    "news-extractor-backend",
+    "news-extractor-mcp",
 ]
 
 [project.optional-dependencies]
-dev = [
-    "pytest>=7.0.0",
-]
+dev = ["pytest>=7.0.0"]
+
+[project.scripts]
+news-extractor-backend = "news_extractor_backend.cli:main"
+news-extractor-mcp = "news_extractor_mcp.server:main"
 
 [build-system]
 requires = ["hatchling"]
@@ -28,6 +33,18 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = []
+[tool.uv.sources]
+news-extractor-core = { workspace = true }
+news-extractor-backend = { workspace = true }
+news-extractor-mcp = { workspace = true }
+
+[tool.uv.workspace]
+members = [
+    "news_extractor_core",
+    "news_extractor_backend",
+    "news_extractor_mcp",
+]
+
 
 [tool.hatch.build.targets.wheel]
 packages = [
